fix CTA buttons wrapping on mobile

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -890,6 +890,7 @@ a.button {
   gap: 0.5em;
 
   text-decoration: none;
+  text-wrap: nowrap;
 
   padding: 0.3em 1em;
 
@@ -937,6 +938,7 @@ nav {
     padding: 5px 0;
 
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
   }
 }
@@ -1013,14 +1015,14 @@ section {
 
   &.facebook {
     @media (prefers-color-scheme: light) {
-      color: #0866FF;
+      color: #0866ff;
     }
   }
 
   &.meetup {
     width: 1.2em;
     @media (prefers-color-scheme: light) {
-      color: #ED1C40;
+      color: #ed1c40;
     }
   }
 }
@@ -1052,4 +1054,10 @@ section {
 
 nav.see-more {
   padding-bottom: 30px;
+}
+
+@media screen and (max-width: 480px) {
+  .hide-480vw {
+    display: none;
+  }
 }
